--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -27,3 +27,9 @@
     outline: 2px solid var(--leva-colors-accent2);
   }
 }
+
+.bgSelectItemVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
