--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -15,6 +15,8 @@
   align-items: center;
   font-family: sans-serif;
 
+  display: none;
+
   .logoWrapper {
     display: flex;
     flex-direction: row;
